--- a/linklist.html
+++ b/linklist.html
@@ -25,7 +25,7 @@
             color:darkmagenta;
         }
         body{
-            background-image: url(/divya/images\ \(31\).jpg);
+            background-image: url(images\ \(31\).jpg);
             background-repeat: no-repeat;
             background-size:cover;
         }
@@ -44,17 +44,17 @@
     <ol>
         <li>
             <h1 class="s">GOKU</h1>
-            <a href="https://en.wikipedia.org/wiki/Goku" target="_blank"><img src="/divya/download (4).jpg" width="80PX;"> </a>
+            <a href="https://en.wikipedia.org/wiki/Goku" target="_blank"><img src="download (4).jpg" width="80PX;"> </a>
             <b><dd> He has served as the main protagonist of the Dragon Ball series for 32 years.</b></dd><br><br><br>
         </li><br><br><br>
         <li>
             <h1 class="ss">ITACHI</h1>
-            <a href="https://en.wikipedia.org/wiki/Itachi_Uchiha"  target="_blank"><img src="/divya/download (5).jpg"" width="80PX;"> </a>
+            <a href="https://en.wikipedia.org/wiki/Itachi_Uchiha"  target="_blank"><img src="download (5).jpg"" width="80PX;"> </a>
             <b><dd>To protect the village, he was willing to lay down his life, paint himself as a villain</b></dd><br><br>
         </li><br>
         <li>
             <h1 class="ss">BROLY</h1>
-            <a href="https://dragonball.fandom.com/wiki/Broly_(DBS)" target="_blank"><img src="/divya/download (6).jpg" width="80PX;">  </a>
+            <a href="https://dragonball.fandom.com/wiki/Broly_(DBS)" target="_blank"><img src="download (6).jpg" width="80PX;">  </a>
             <b><dd>Broly was born in Age 737, during the period of intense turmoil between Frieza and the Saiyans</b></dd><br>
         </li><br>
         
